Layout updates and minor refactoring